--- a/terminal-chess/terminal-chess.csproj
+++ b/terminal-chess/terminal-chess.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <NoWarn>$(NoWarn);CS8618;CS8600;CS8604;CS8603</NoWarn>
+    <NoWarn>$(NoWarn);CS8618;CS8600;CS8604;CS8603;CS8602</NoWarn>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
 
